--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
                   <li>
                     {% if perms.orders %} 
                     <a
-                      hx-get="{% url "inventory_dashboard" %}"
+                      hx-get="{% url 'inventory_dashboard' %}"
                       hx-target="#settings_content"
                       hx-swap="innerHtml"
                       _="on click remove .bg-gray-700 from <a/> in .ul_items then add .bg-gray-700 to me"
