--- a/templates/cashier/forms/customer_form.html
+++ b/templates/cashier/forms/customer_form.html
@@ -20,6 +20,10 @@
       Update
     </button>
     <button
+      hx-get="{% url 'clear_customer_info' %}"
+      hx-target="#customer"
+      hx-swap="innerHtml"
+      hx-trigger="click, clear_info"
       _="on click reset() the #customer_form"
       class="block text-white focus:ring-4 focus:outline-none
        font-medium rounded-lg text-sm w-24 h-10 px-5 py-2.5 text-center bg-gray-600
