--- a/templates/cashier/forms/customer_info.html
+++ b/templates/cashier/forms/customer_info.html
@@ -63,7 +63,7 @@
       hx-get="{% url 'clear_customer_info' %}"
       hx-target="#customer"
       hx-swap="innerHtml"
-      hx-trigger="click"
+      hx-trigger="click, clear_info"
       _="on click set #customer_order_id.value to '' then reset() the #order_id_form"
       class="block text-white focus:ring-4 focus:outline-none
        font-medium rounded-lg text-sm w-24 h-9 px-5 py-2.5 text-center bg-gray-600
