--- a/templates/cashier/modals/edit_customer.html
+++ b/templates/cashier/modals/edit_customer.html
@@ -19,7 +19,7 @@
       cancel
     </button>
     <button 
-      _="on click add .hidden to modal_div"
+      _="on click add .hidden to modal_div then fetch `clear_customer_info` put the result into #customer then reset() the #customer_id_form  "
       class="block text-white focus:ring-4 focus:outline-none
       font-medium rounded-lg text-sm px-5 py-2.5 text-center bg-blue-600 hover:bg-blue-800 
       focus:ring-blue-800 my-3" type="submit">
