--- a/templates/editor/editor.html
+++ b/templates/editor/editor.html
@@ -53,8 +53,8 @@ form label {
       <div class="bg-gray-700 flex justify-center text-gray-300 p-2 sticky top-0 rounded-tl-lg">
         <p class="text-lg border-b"> Orders List </p>
       </div>
-      <div class="pt-2">
-        {% include 'editor/tables/orders_table.html' %}
+      <div class="pt-2"
+        hx-target="this" hx-trigger="load, every 10s" hx-get="{% url 'editor_table_refresh' %}">
       </div>
     </div>
 
