--- a/templates/cashier/tables/update_order_details.html
+++ b/templates/cashier/tables/update_order_details.html
@@ -86,17 +86,17 @@
         </tr>
         <tr class="border-b border-gray-600">
           <th scope="row" class="uppercase px-6 py-2 font-medium whitespace-nowrap text-white bg-gray-700">Date</th>
-          <td class="px-2 py-2 text-base">{% now "M d, Y g:i a" %}</td>
+          <td class="px-2 py-2 text-base">{% now "j/n/Y g:i a" %}</td>
         </tr>
         <tr class="border-b border-gray-600">
           <th scope="row" class="uppercase px-6 py-2 font-medium whitespace-nowrap text-white bg-gray-700">Deliver Date</th>
           <td class="px-2 py-2 grid grid-cols-4 place-items-start" x-data="{input: false, span: true}">
             <div class="col-span-3">
               <div class="flex gap-2">
-                {{ form.deliver_date }}
+                {{ form.deliver_date|date:'j/n/Y' }}
                 {{ form.deliver_time }}
               </div>
-              <span class="text-base date" x-show="span">{{ form.instance.deliver_date }}</span>
+              <span class="text-base date" x-show="span">{{ form.instance.deliver_date|date:'j/n/Y' }}</span>
               <span class="text-base" x-show="span"> | </span>
               <span class="text-base time" x-show="span">{{ form.instance.deliver_time }}</span>
             </div>
