add the button component

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="{% static 'src/output.css' %}">
       {% endcompress %}
   </head>
-  <body class="bg-gray-600 h-screen">
+  <body class="bg-gray-600 h-screen font-inter">
     
     <style>
     form input,form textarea, form select{
