--- a/templates/cashier/modals/bill.html
+++ b/templates/cashier/modals/bill.html
@@ -1,4 +1,4 @@
-<div class="container mx-auto p-6" id="print_area">
+<div class="container mx-auto p-6 font-rubik" id="print_area">
     <div class="bg-white p-6 rounded-lg">
       <div class="flex flex-col justify-center items-center">
         <h1 class="font-bold" style="font-size: 50px;">Studio Vision</h1>
@@ -7,9 +7,7 @@
       </div>
   
       <table class="rtl:min-w-full rtl:bg-white rtl:border rtl:border-black rtl:mb-4" dir="rtl">
-        <tbody>
-          <tr>
-            <th class="rtl:py-2 rtl:px-4 rtl:border rtl:border-black rtl:text-center rtl:font-bold">رقم الأوردر</th>
+        <tbody> <tr> <th class="rtl:py-2 rtl:px-4 rtl:border rtl:border-black rtl:text-center rtl:font-bold">رقم الأوردر</th>
             <td class="rtl:py-2 rtl:px-4 rtl:border rtl:border-black rtl:text-center rtl:font-bold">{{ order.id }}</td>
           </tr>
           <tr>
