--- a/templates/settings/employee/tabs/info.html
+++ b/templates/settings/employee/tabs/info.html
@@ -1,3 +1,4 @@
+{% load component_tags %}
 <div
   hx-get="{% url 'info' user.user.id %}"
   hx-trigger="info"
@@ -42,16 +43,7 @@
       </div>
       {% if perms.accounts.change_userprofile %}
       <div class="flex justify-center lg:gap-32 gap-5 mt-10 mx-3">
-        <button 
-          hx-get="{% url 'edit_user' user.user.id %}"
-          hx-target="#modal_form"
-          hx-swap="innerHtml"
-          _="on click remove .hidden from modal_div " 
-          class="text-white focus:ring-4 focus:outline-none
-          font-medium rounded-lg text-sm px-5 py-2.5 text-center bg-blue-600 hover:bg-blue-700 
-          focus:ring-blue-800 my-3" type="button">
-          Edit
-        </button>
+        {% component "button" label="Edit" hx_get=True url_name="edit_user" url_params=user.user.id hx_swap="innerHtml" hx_target="#modal_form" hyper="on click remove .hidden from modal_div" %}{% endcomponent %}
         <button 
           hx-get="{% url 'reset_password' user.user.id %}" 
           hx-target="#modal_form"
