--- a/templates/cashier/home.html
+++ b/templates/cashier/home.html
@@ -120,16 +120,8 @@ form label {
             </div>
           </div>
           <input type="hidden" name="customer_id" id="form_customer_id">
-          <button
-            hx-post="{% url 'order_info' %}"
-            hx-target="#order_id"
-            hx-swap="innerHTML"
-            id="new_order_button"
-            class="block text-white focus:ring-4 focus:outline-none
-            font-medium rounded-lg text-sm w-28 h-9 px-5 py-2.5 text-center bg-blue-600
-            hover:bg-blue-700 focus:ring-blue-800 my-3" type="button">
-            New Order
-          </button>
+          <br>
+          {% component "button" label="New Order" hx_post=True url_name="order_info" hx_target="#order_id" hx_swap="innerHTML"  %}{% endcomponent %}
         </form>
       </div>
     </div>
@@ -162,13 +154,7 @@ form label {
           <!--Order Details buttons-->
           <div class="row-span-1 flex justify-between items-center bg-gray-800 h-full px-5 rounded-br-lg">
             <div class="flex justify-center items-center px-5 gap-10">
-              <button 
-                form="order_details_form"
-                class="block text-white focus:ring-4 focus:outline-none
-                font-medium rounded-lg text-sm px-5 py-2.5 text-center bg-blue-600 hover:bg-blue-700 
-                focus:ring-blue-800 my-3" type="submit">
-                OK
-              </button>
+              {% component "button" type="submit" label="Ok" form="order_details_form" %}{% endcomponent %}
               <form method="POST">
                 <input type="hidden" name="order_id" id="print_order_id">
                 <button 
