--- a/templates/settings/employee/tabs/info.html
+++ b/templates/settings/employee/tabs/info.html
@@ -1,4 +1,3 @@
-{% load component_tags %}
 <div
   hx-get="{% url 'info' user.user.id %}"
   hx-trigger="info"
@@ -13,7 +12,7 @@
         <table class="w-full text-sm text-left rtl:text-right text-gray-200">
           <tbody>
             <tr class="border-b border-gray-600">
-              <th scope="row" class="px-6 py-4 font-medium whitespace-nowrap text-white Username </th>
+              <th scope="row" class="px-6 py-4 font-medium whitespace-nowrap text-white bg-gray-700"> Username </th>
               <td class="px-6 py-4"> {{ user.user.username }} </td>
             </tr>
             <tr class="border-b border-gray-600">
@@ -44,16 +43,7 @@
       {% if perms.accounts.change_userprofile %}
       <div class="flex justify-center lg:gap-32 gap-5 mt-10 mx-3">
         {% component "button" label="Edit" hx_get=True url_name="edit_user" url_params=user.user.id hx_swap="innerHtml" hx_target="#modal_form" hyper="on click remove .hidden from modal_div" %}{% endcomponent %}
-        <button 
-          hx-get="{% url 'reset_password' user.user.id %}" 
-          hx-target="#modal_form"
-          hx-swap="innerHtml"
-          _="on click remove .hidden from modal_div " 
-          class="text-white focus:ring-4 focus:outline-none
-          font-medium rounded-lg text-sm px-5 py-2.5 text-center bg-blue-600 hover:bg-blue-700 
-          focus:ring-blue-800 my-3" type="button">
-          Reset Password
-        </button>
+        {% component "button" label="Reset Password" hx_get=True url_name="reset_password" url_params=user.user.id hx_swap="innerHtml" hx_target="#modal_form" hyper="on click remove .hidden from modal_div" %}{% endcomponent %}
       </div>
       {% endif %}
     </div>
@@ -102,16 +92,7 @@
       </div>
       {% if perms.accounts.change_userprofile %}
       <div class="flex justify-center my-2">
-        <button 
-          hx-get="{% url 'edit_user_profile' user.user.id %}"
-          hx-target="#modal_form"
-          hx-swap="innerHtml"
-          _="on click remove .hidden from modal_div " 
-          class="text-white focus:ring-4 focus:outline-none
-          font-medium rounded-lg text-sm px-5 py-2.5 text-center bg-blue-600 hover:bg-blue-700 
-          focus:ring-blue-800 my-3" type="button">
-          Edit
-        </button>
+        {% component "button" label="Edit" hx_get=True url_name="edit_user_profile" url_params=user.user.id hx_swap="innerHtml" hx_target="#modal_form" hyper="on click remove .hidden from modal_div" %}{% endcomponent %}
       </div>
       {% endif %}
     </div>
