create the upload page and orders_list (table & search)

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,6 +49,19 @@
                 </a>
               </li>
               <li>
+                <a 
+                  href="{% url 'upload' %}"
+                  _="on click remove .bg-gray-700 from <a/> in .ul_items"
+                  class="flex items-top p-2 rounded-lg text-white 
+                  hover:bg-gray-700 group">
+                  <span class="inline-block w-5 h-5 transition duration-75 
+                    text-gray-200 group-hover:text-white">
+                    <i class="text-xl fa-solid fa-upload"></i>
+                  </span>
+                    <span class="ms-5 text-gray-300 text-lg ">Upload</span>
+                </a>
+              </li>
+              <li>
                 <a
                   _="on click remove .bg-gray-700 from <a/> in .ul_items then toggle .hidden on #dropdown"
                   class="flex items-top p-2 rounded-lg text-white 
