--- a/templates/upload/tables/partial_order_list.html
+++ b/templates/upload/tables/partial_order_list.html
@@ -1,7 +1,7 @@
 {% for order in order_list %}
 <tr class="text-lg odd:bg-gray-900 even:bg-gray-800">
     <td class="p-0 hover:text-white hover:font-bold cursor-pointer">
-        <a hx-get="{% url 'editor_order_details' order.id %}" hx-target="#order_details_section" hx-swap="innerHTML" class="cursor-pointer h-full w-full px-3 py-3">
+        <a hx-get="{% url 'upload_order_details' order.id %}" hx-target="#order_details_section" hx-swap="innerHTML" class="cursor-pointer h-full w-full px-3 py-3">
             {{ order.id }}
         </a>
     </td>
