--- a/templates/upload/upload.html
+++ b/templates/upload/upload.html
@@ -18,7 +18,7 @@ form label {
       </li>
       <li class="inline-flex items-center space-x-1 text-gray-400 hover:text-white">
         <span class="ms-1 text-sm font-medium md:ms-2 text-gray-400">
-          Editor
+          Upload
         </span>
       </li>
     </ol>
@@ -64,7 +64,8 @@ form label {
       <div class="bg-gray-700 flex justify-center text-gray-300 p-2 sticky top-0 rounded-tr-lg">
         <p class="text-lg border-b"> Orders Detail </p>
       </div>
-      <div id="order_details_section" style="height: 73dvh">
+      <div 
+        id="order_details_section" style="height: 73dvh">
       </div>
     </div>
   </div>
