--- a/templates/upload/tables/order_details_table.html
+++ b/templates/upload/tables/order_details_table.html
@@ -5,17 +5,18 @@
       <th scope="col" class="px-3 py-3">Attributes</th>
       <th scope="col" class="px-3 py-3">Image</th>
       <th scope="col" class="px-3 py-3">Deliver Date</th>
+      <th scope="col" class="px-3 py-3">Actions</th>
     </tr>
   </thead>
   <tbody>
     {% for detail in order_details_list %}
     <tr
-      hx-get="{% url 'upload_order_detail_image' detail.id %}"
-      hx-target="#image_preview"
-      hx-swap="innerHTML"
-      class="text-lg odd:bg-gray-900 even:bg-gray-800 cursor-pointer hover:text-white">
-      <td class="px-3 py-3">
-        {{ detail.product_line.product.name }}
+      class="text-lg odd:bg-gray-900 even:bg-gray-800 ">
+      <td class="px-3 py-3 cursor-pointer hover:text-white"
+        hx-get="{% url 'upload_order_detail_image' detail.id %}"
+        hx-target="#image_preview"
+        hx-swap="innerHTML"
+        <p> {{ detail.product_line.product.name }} </p>
       </td>
       <td class="px-3 py-3">
         {{ detail.product_line.values }}
@@ -26,7 +27,27 @@
       <td class="px-3 py-3">
         {{ detail.deliver_date }}
       </td>
+      <td class="px-3 py-3">
+        <a 
+          hx-get="{% url 'upload_order_detail_images' detail.id %}"
+          hx-target="#modal_form"
+          hx-swap="innerHtml"
+          _="on click remove .hidden from modal_div"
+          class="cursor-pointer hover:text-blue-700">
+          <i class="fa-solid fa-cloud-arrow-up"></i>
+        </a>
+      </td>
     </tr>
     {% endfor %}
   </tbody>
 </table>
+<div
+  id="modal_div"
+  class="hidden overflow-y-auto overflow-x-hidden fixed left-0 top-0 bg-black 
+  bg-opacity-50 w-screen h-screen flex justify-center items-center z-50 md:inset-0 ">
+  <div class="relative p-4 w-full max-w-lg max-h-full">
+    <div class="relative rounded-lg shadow bg-gray-700 p-6 my-6">
+      <div id="modal_form"> </div>
+    </div>
+  </div>
+</div>
